imporved spring security code